SVGResourcesCache::addResourcesFromRenderObject should not allocate SVGResources unconditionally https://bugs.webkit.org/show_bug.cgi?id=98684

Reviewed by Nikolas Zimmermann.

Only allocate SVGResources where needed and possible (not pending).

* Source/WebCore/rendering/svg/SVGResources.cpp:
(WebCore::SVGResources::buildCachedResources):
(WebCore::SVGResources::setClipper):
(WebCore::SVGResources::setFilter):
(WebCore::SVGResources::setMarkerStart):
(WebCore::SVGResources::setMarkerMid):
(WebCore::SVGResources::setMarkerEnd):
(WebCore::SVGResources::setMasker):
(WebCore::SVGResources::setFill):
(WebCore::SVGResources::setStroke):
(WebCore::SVGResources::setLinkedResource):
* Source/WebCore/rendering/svg/SVGResources.h:
* Source/WebCore/rendering/svg/SVGResourcesCache.cpp:
(WebCore::SVGResourcesCache::addResourcesFromRenderer):

Canonical link: https://commits.webkit.org/269397@main