Source/WebCore/rendering/svg/SVGResourcesCache.cpp
@@ -37,8 +37,8 @@ void SVGResourcesCache::addResourcesFromRenderer(RenderElement& renderer, const 
     ASSERT(!m_cache.contains(&renderer));
 
     // Build a list of all resources associated with the passed RenderObject
-    auto newResources = makeUnique<SVGResources>();
-    if (!newResources->buildCachedResources(renderer, style))
+    auto newResources = SVGResources::buildCachedResources(renderer, style);
+    if (!newResources)
         return;
 
     // Put object in cache.
